--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blackjack • 3 Tries • Casino</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="table-container">
@@ -22,5 +23,6 @@
       </div>
     </div>
   </div>
+   <script src="script.js" defer></script>
 </body>
 </html>
